; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_output/opengl/extr_egl.c_CheckAPI.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_output/opengl/extr_egl.c_CheckAPI.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EGL_CLIENT_APIS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @CheckAPI to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @CheckAPI(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @EGL_CLIENT_APIS, align 4
  %8 = call i8* @eglQueryString(i32 %6, i32 %7)
  store i8* %8, i8** %5, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = call i32 @vlc_gl_StrHasToken(i8* %9, i8* %10)
  ret i32 %11
}

declare dso_local i8* @eglQueryString(i32, i32) #1

declare dso_local i32 @vlc_gl_StrHasToken(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
